2005-10-21  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add test for execinfo.h.

2005-10-20  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (DISTCHECK_CONFIGURE_FLAGS): New.  Make 'distcheck'
	compile with the 'monolite' in the distribution tarball.
	(compiler-tests-net_2_0): Avoid deleting
	$(mcs_topdir)/build/common/Consts.cs.

2005-10-20  Robert Jordan  <robertj@gmx.net>

	* data/net_2_0/machine.config: Added IPC channel templates.

2005-10-11  John Luke  <john.luke@gmail.com>

	* man/monop.1: update for new monop options
	
2005-10-04  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Fix up problems with the latest libtool on win32.

2005-10-04  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Remove 'Globalization:' entry from final message.

2005-09-27  Raja R Harinath  <rharinath@novell.com>

	* configure.in (BUILD_MCS): New automake conditional.  Used to
	disable building the mcs/ tree if cross-compiling.
	(CROSS_COMPILING): New automake conditional.
	($mcsdir/build/config.make): Don't clobber when cross-compiling.
	(GLIB_CFLAGS, GLIB_LIBS, GMODULE_CFLAGS, GMODULE_LIBS):
	Define even when cross-compiling.
	* runtime/Makefile.am (all-local, install, uninstall, clean-local):
	Disable building in the mcs/ tree if !BUILD_MCS.

2005-09-22  Raja R Harinath  <rharinath@novell.com>

	* configure.in (MONO_VERSION): Emit it into config.make.  Don't
	build Consts.cs.

2005-09-19  Zoltan Varga  <vargaz@gmail.com>

	* docs/exception-handling.txt: Add section about libunwind.
	
	* docs/exception-handling.txt: New file.

2005-09-16  Raja R Harinath  <rharinath@novell.com>

	* runtime/Makefile.am (all-local, install-exec, uninstall)
	(mcs-do-test-profiles, mcs-do-run-test-profiles, mcs-compileall):
	Don't call semdel-wrapper.

2005-09-06  Chris Toshok  <toshok@ximian.com>

	* data/browscap.ini: Add the ecmascriptversion/w3cdomversion
	attributes required for ASP.Net client side validation to the