@@ -1,12 +1,12 @@
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-libdir=@libdir@
-includedir=@includedir@
+prefix=${pcfiledir}/../..
+exec_prefix=${pcfiledir}/../..
+libdir=${prefix}/lib
+includedir=${prefix}/include
 
 
 Name: Mono Interpreter
 Description: Mono Interpreter Runtime
 Version: @VERSION@
 Requires: glib-2.0 gmodule-2.0 gthread-2.0
-Libs: -L${libdir} -lmint @libmono_ldflags@ @ICU_LIBS@ -lm
+Libs: -L${libdir} -lmint @libmono_ldflags@ -lm
 Cflags: -I${includedir} @libmono_cflags@
